# sympydantic

./: .gitignore  IFLOW.md  LICENSE  README.md  README_ja.md  README_zh.md  _pyproject.toml  main.py  pyproject.toml  test.sh
.github/workflows/: ci.yml  publish.yml  test.yml
README_translations/: README_cn.md  README_en.md
_patch/: __init__.py  pydantic.py  sympy.py
dataschemas/: numpy.py  torch.py
metadatas/: basemetadata.py  device.py  protocols.py
sympydantic/: __init__.py  __main__.py
sympydantic/_patch/: __init__.py  pydantic.py  sympy.py
sympydantic/dataschemas/: numpy.py  torch.py
sympydantic/errors/: __init__.py  compare.py  sympy.py  tensorlike.py
sympydantic/metadatas/: __init__.py  basemetadata.py  device.py  grad.py  nrange.py  protocols.py  tensorshape.py
test/: __init__.py  test_cast_numpy.py  test_ellipsis.py  test_error_tensorlike.py  test_nrange.py  test_patchs.py  test_shape.py  test_sympy.py  test_tensorlike_protocol.py  test_timeit.py  test_torch_type.py  test_typealias.py  test_typevartuple.py
