# 这个toml文件是测试环节使用的
# 由于该工程实际部署时，并不刚需numpy torch作为依赖
# 实际部署时使用_pyproject.toml作为工程的配置文件
[project]
name = "sympydantic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.18.2",
    "numpy>=2.3.5",
    "pydantic[mypy]>=2.12.4",
    "pytest>=9.0.1",
    "sympy>=1.14.0",
    "torch>=2.9.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.mypy]
plugins = [
  "pydantic.mypy",
]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
addopts = "-s"
log_cli = 1