[project]
name = "sympydantic"
version = "0.1.0"
description = "Sympydantic combines Pydantic and SymPy to pre-validate or pre-cast shapes of numpy/torch tensors."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["python", "numpy", "torch", "sympy", "pydantic", "sympydantic"]
authors = [
    { name = 'HirasawaGen', email = '1294702887@qq.com' }
]
maintainers = [
    { name = 'HirasawaGen', email = '1294702887@qq.com' }
]
license = { text = "MIT" }
dependencies = [
    "sympy>=1.14.0",
    "pydantic>=2.12.4",
]

[project.urls]
Repository = "https://github.com/HirasawaGen/sympydantic"

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sympydantic*"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "numpy>=2.3.5",
    "pytest>=9.0.1",
    "torch>=2.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.mypy]
plugins = ["pydantic.mypy"]
disable_error_code = ["import-untyped"]
